// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`clickable div should toggle visibility of div 1`] = `
<div
  className="list-item"
>
  <div
    className="list-item__header list-item__header--visible"
  >
    <input
      checked={false}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <div
      className="list-item__toggle"
      onClick={[Function]}
    >
      <h3
        className="list-item__title"
      >
        Watch lecture
      </h3>
      <h3
        className="list-item__deadline"
      >
        5th Jun 2020
      </h3>
    </div>
  </div>
  <CSSTransition
    className="list-item__visible"
    classNames=""
    in={true}
    timeout={200}
  >
    <div>
      <div
        className="file-manager"
      />
      <p
        className="list-item__description"
      >
        <b>
          Description:
        </b>
         
        Catch up on lectures!
      </p>
      <button
        className="button button--norm-grey button--grey"
        onClick={[Function]}
      >
        Edit Task
      </button>
      <button
        className="button button--norm-grey button--grey"
        onClick={[Function]}
      >
        Remove Task
      </button>
    </div>
  </CSSTransition>
   
  <Connect(EditTaskModal)
    groupModule="CS2030"
    isOpen={false}
    onRequestClose={[Function]}
    removeAdmin={[MockFunction]}
    task={
      Object {
        "completed": false,
        "deadline": 1591329600000,
        "description": "Catch up on lectures!",
        "id": "5feb18c0-78a8-49b6-8584-75b8c1b40abc",
        "module": "CS2030",
        "title": "Watch lecture",
      }
    }
  />
</div>
`;

exports[`clickable div should toggle visibility of div 2`] = `
<div
  className="list-item"
>
  <div
    className="list-item__header"
  >
    <input
      checked={false}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <div
      className="list-item__toggle"
      onClick={[Function]}
    >
      <h3
        className="list-item__title"
      >
        Watch lecture
      </h3>
      <h3
        className="list-item__deadline"
      >
        5th Jun 2020
      </h3>
    </div>
  </div>
  <CSSTransition
    className="list-item__visible"
    classNames=""
    in={false}
    timeout={200}
  >
    <div>
      <div
        className="file-manager"
      />
      <p
        className="list-item__description"
      >
        <b>
          Description:
        </b>
         
        Catch up on lectures!
      </p>
      <button
        className="button button--norm-grey button--grey"
        onClick={[Function]}
      >
        Edit Task
      </button>
      <button
        className="button button--norm-grey button--grey"
        onClick={[Function]}
      >
        Remove Task
      </button>
    </div>
  </CSSTransition>
   
  <Connect(EditTaskModal)
    groupModule="CS2030"
    isOpen={false}
    onRequestClose={[Function]}
    removeAdmin={[MockFunction]}
    task={
      Object {
        "completed": false,
        "deadline": 1591329600000,
        "description": "Catch up on lectures!",
        "id": "5feb18c0-78a8-49b6-8584-75b8c1b40abc",
        "module": "CS2030",
        "title": "Watch lecture",
      }
    }
  />
</div>
`;

exports[`render should render TaskListItem with group task on GroupPage as admin 1`] = `
<div
  className="list-item"
>
  <div
    className="list-item__header list-item__header--visible"
  >
    <input
      checked={false}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <div
      className="list-item__toggle"
      onClick={[Function]}
    >
      <h3
        className="list-item__title"
      >
        Homework 1
      </h3>
    </div>
  </div>
  <CSSTransition
    className="list-item__visible"
    classNames=""
    in={true}
    timeout={200}
  >
    <div>
      <div
        className="file-manager"
      >
        <div>
          <Connect(FileUploadForm)
            gid="72b6b3bb-cb74-4d08-ae67-dfc1b51baaf9"
            id="076e610e-aade-4d2b-897f-81a29f00c76b"
          />
        </div>
        <button
          className="button button--grey button--norm-grey button--right"
          onClick={[Function]}
        >
          Download submissions
        </button>
      </div>
      <p
        className="list-item__description"
      >
        <b>
          Description:
        </b>
         
        Finish by Sunday!
      </p>
      <div
        className="list-item__users"
      >
        <p>
          <b>
            Users: 
          </b>
        </p>
        <div
          key="testuid"
        >
          <div>
            <input
              checked={false}
              className="user-complete-checkbox"
              disabled={true}
              htmlFor="testuid"
              type="checkbox"
            />
            <label
              className="user-complete-checkbox__label"
              data-content="Robert"
              id="testuid"
            >
              Robert
            </label>
          </div>
        </div>
      </div>
      <button
        className="button button--norm-grey button--grey"
        onClick={[Function]}
      >
        Edit Task
      </button>
      <button
        className="button button--norm-grey button--grey"
        onClick={[Function]}
      >
        Remove Task
      </button>
    </div>
  </CSSTransition>
   
  <Connect(EditTaskModal)
    gid="72b6b3bb-cb74-4d08-ae67-dfc1b51baaf9"
    groupModule="CS1231"
    isOpen={false}
    onRequestClose={[Function]}
    removeAdmin={[MockFunction]}
    task={
      Object {
        "completed": Object {
          "testuid": false,
        },
        "description": "Finish by Sunday!",
        "downloadURLs": Object {
          "testuid": Object {
            "downloadURL": "website.com",
            "fileName": "Homework.pdf",
          },
        },
        "gid": "72b6b3bb-cb74-4d08-ae67-dfc1b51baaf9",
        "id": "076e610e-aade-4d2b-897f-81a29f00c76b",
        "module": "CS1231",
        "title": "Homework 1",
        "uploadRequired": true,
      }
    }
    users={
      Array [
        Object {
          "admin": true,
          "displayName": "Robert",
          "studentNum": "A0123456A",
          "uid": "testuid",
        },
        Object {
          "admin": false,
          "displayName": "Peter",
          "studentNum": "A0000000A",
          "uid": "testuid2",
        },
      ]
    }
  />
</div>
`;

exports[`render should render TaskListItem with group task on GroupPage as regular user 1`] = `
<div
  className="list-item"
>
  <div
    className="list-item__header list-item__header--visible"
  >
    <input
      checked={false}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <div
      className="list-item__toggle"
      onClick={[Function]}
    >
      <h3
        className="list-item__title"
      >
        Homework 1
      </h3>
    </div>
  </div>
  <CSSTransition
    className="list-item__visible"
    classNames=""
    in={true}
    timeout={200}
  >
    <div>
      <div
        className="file-manager"
      >
        <div>
          <Connect(FileUploadForm)
            gid="72b6b3bb-cb74-4d08-ae67-dfc1b51baaf9"
            id="076e610e-aade-4d2b-897f-81a29f00c76b"
          />
        </div>
      </div>
      <p
        className="list-item__description"
      >
        <b>
          Description:
        </b>
         
        Finish by Sunday!
      </p>
      <div
        className="list-item__users"
      >
        <p>
          <b>
            Users: 
          </b>
        </p>
        <div
          key="testuid"
        >
          <div>
            <input
              checked={false}
              className="user-complete-checkbox"
              disabled={true}
              htmlFor="testuid"
              type="checkbox"
            />
            <label
              className="user-complete-checkbox__label"
              data-content="Robert"
              id="testuid"
            >
              Robert
            </label>
          </div>
        </div>
      </div>
    </div>
  </CSSTransition>
   
  <Connect(EditTaskModal)
    gid="72b6b3bb-cb74-4d08-ae67-dfc1b51baaf9"
    groupModule="CS1231"
    isOpen={false}
    onRequestClose={[Function]}
    removeAdmin={[MockFunction]}
    task={
      Object {
        "completed": Object {
          "testuid": false,
        },
        "description": "Finish by Sunday!",
        "downloadURLs": Object {
          "testuid": Object {
            "downloadURL": "website.com",
            "fileName": "Homework.pdf",
          },
        },
        "gid": "72b6b3bb-cb74-4d08-ae67-dfc1b51baaf9",
        "id": "076e610e-aade-4d2b-897f-81a29f00c76b",
        "module": "CS1231",
        "title": "Homework 1",
        "uploadRequired": true,
      }
    }
    users={
      Array [
        Object {
          "admin": true,
          "displayName": "Robert",
          "studentNum": "A0123456A",
          "uid": "testuid",
        },
        Object {
          "admin": false,
          "displayName": "Peter",
          "studentNum": "A0000000A",
          "uid": "testuid2",
        },
      ]
    }
  />
</div>
`;

exports[`render should render TaskListItem with group task on dashboard 1`] = `
<div
  className="list-item"
>
  <div
    className="list-item__header"
  >
    <input
      checked={false}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <div
      className="list-item__toggle"
      onClick={[Function]}
    >
      <h3
        className="list-item__title"
      >
        Homework 1
      </h3>
    </div>
  </div>
  <CSSTransition
    className="list-item__visible"
    classNames=""
    in={false}
    timeout={200}
  >
    <div>
      <p
        className="list-item__group"
      >
        <b>
          Group:
        </b>
         
        CS1231
      </p>
      <div
        className="file-manager"
      />
      <p
        className="list-item__description"
      >
        <b>
          Description:
        </b>
         
        Finish by Sunday!
      </p>
    </div>
  </CSSTransition>
   
  <Connect(EditTaskModal)
    gid="72b6b3bb-cb74-4d08-ae67-dfc1b51baaf9"
    groupModule="CS1231"
    isOpen={false}
    onRequestClose={[Function]}
    removeAdmin={[MockFunction]}
    task={
      Object {
        "completed": false,
        "description": "Finish by Sunday!",
        "downloadURLs": Object {
          "testuid": Object {
            "downloadURL": "website.com",
            "fileName": "Homework.pdf",
          },
        },
        "gid": "72b6b3bb-cb74-4d08-ae67-dfc1b51baaf9",
        "id": "076e610e-aade-4d2b-897f-81a29f00c76b",
        "module": "CS1231",
        "title": "Homework 1",
        "uploadRequired": true,
      }
    }
  />
</div>
`;

exports[`render should render personal TaskListItem 1`] = `
<div
  className="list-item"
>
  <div
    className="list-item__header"
  >
    <input
      checked={false}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <div
      className="list-item__toggle"
      onClick={[Function]}
    >
      <h3
        className="list-item__title"
      >
        Watch lecture
      </h3>
      <h3
        className="list-item__deadline"
      >
        5th Jun 2020
      </h3>
    </div>
  </div>
  <CSSTransition
    className="list-item__visible"
    classNames=""
    in={false}
    timeout={200}
  >
    <div>
      <div
        className="file-manager"
      />
      <p
        className="list-item__description"
      >
        <b>
          Description:
        </b>
         
        Catch up on lectures!
      </p>
      <button
        className="button button--norm-grey button--grey"
        onClick={[Function]}
      >
        Edit Task
      </button>
      <button
        className="button button--norm-grey button--grey"
        onClick={[Function]}
      >
        Remove Task
      </button>
    </div>
  </CSSTransition>
   
  <Connect(EditTaskModal)
    groupModule="CS2030"
    isOpen={false}
    onRequestClose={[Function]}
    removeAdmin={[MockFunction]}
    task={
      Object {
        "completed": false,
        "deadline": 1591329600000,
        "description": "Catch up on lectures!",
        "id": "5feb18c0-78a8-49b6-8584-75b8c1b40abc",
        "module": "CS2030",
        "title": "Watch lecture",
      }
    }
  />
</div>
`;

exports[`render should render personal TaskListItem with group/module shown 1`] = `
<div
  className="list-item"
>
  <div
    className="list-item__header"
  >
    <input
      checked={false}
      disabled={false}
      onChange={[Function]}
      type="checkbox"
    />
    <div
      className="list-item__toggle"
      onClick={[Function]}
    >
      <h3
        className="list-item__title"
      >
        Do lab
      </h3>
    </div>
  </div>
  <CSSTransition
    className="list-item__visible"
    classNames=""
    in={false}
    timeout={200}
  >
    <div>
      <p
        className="list-item__group"
      >
        <b>
          Group:
        </b>
         
        CS2030
      </p>
      <div
        className="file-manager"
      />
      <button
        className="button button--norm-grey button--grey"
        onClick={[Function]}
      >
        Edit Task
      </button>
      <button
        className="button button--norm-grey button--grey"
        onClick={[Function]}
      >
        Remove Task
      </button>
    </div>
  </CSSTransition>
   
  <Connect(EditTaskModal)
    groupModule="CS2030"
    isOpen={false}
    onRequestClose={[Function]}
    removeAdmin={[MockFunction]}
    task={
      Object {
        "completed": false,
        "description": "",
        "id": "a1050220-fa88-4dc2-aa9d-9521ae95de47",
        "module": "CS2030",
        "title": "Do lab",
      }
    }
  />
</div>
`;
